chatbot project developed

--- a/Email_Info_Parsing.ipynb
+++ b/Email_Info_Parsing.ipynb
@@ -28,7 +28,9 @@
     "    data = json.load(file)\n",
     "\n",
     "# Access the API keys\n",
-    "openai.api_key= data['apiKeys']['OpenAI']"
+    "openai.api_key= data['apiKeys']['OpenAI']\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = data['apiKeys']['OpenAI']"
    ]
   },
   {
